# pyproject.toml

[tool.poetry]
name = "string-reversal-example"
version = "0.1.0"
description = "Example project for reversing strings with AsyncFlows."
authors = ["Kevin Kirai <kiraikevin627@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.plugins."asyncflows"]
actions = "string_reversal.my_actions"
